[gd_scene load_steps=5 format=3 uid="uid://6b5vtwy281k7"]

[ext_resource type="Script" uid="uid://gvtqmvdjehhb" path="res://battle_manager.gd" id="1_b278l"]
[ext_resource type="Script" uid="uid://ch0tnev7o0fqi" path="res://calculator_ui.gd" id="2_hvnqj"]
[ext_resource type="Script" uid="uid://v5ijay7cxdf5" path="res://calculator_logic.gd" id="3_hvnqj"]
[ext_resource type="Script" uid="uid://0r7xu2yq6m76" path="res://enemy.gd" id="4_musxc"]

[node name="BattleManager" type="Node"]
script = ExtResource("1_b278l")

[node name="UiLayer" type="CanvasLayer" parent="."]

[node name="CalculatorUI" type="Control" parent="UiLayer"]
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0
script = ExtResource("2_hvnqj")

[node name="Display" type="Label" parent="UiLayer/CalculatorUI"]
layout_mode = 0
offset_right = 40.0
offset_bottom = 23.0

[node name="HandContainer" type="HBoxContainer" parent="UiLayer/CalculatorUI"]
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="EquationSlots" type="HBoxContainer" parent="UiLayer/CalculatorUI"]
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="ExecuteButton" type="Button" parent="UiLayer/CalculatorUI"]
layout_mode = 0
offset_right = 8.0
offset_bottom = 8.0

[node name="CalculatorLogic" type="Node" parent="."]
script = ExtResource("3_hvnqj")

[node name="Enemy" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0
script = ExtResource("4_musxc")
